SERVER-21993 Add more diagnostics on fork() failure